Update gym management: attendance, floor API, Razorpay, Vite React frontend
Co-authored-by: Cursor <cursoragent@cursor.com>